Added FB and Twitter

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
                 <div class="navbar-header">
                     <a class="navbar-brand page-scroll" href="/#page-top">
                         <img src="assets/images/logoalumni.png" alt="" class="logo-text-black"/>
-                        <img src="assets/images/logoalumni.png" alt="" class="logo-text-white"/>
+                        <img src="assets/images/logoalumni.png" alt="" class="logo-text-white"/>                        
+                        <span style="padding-left: 50px;">SMSS ALUMNI.</span>
                     </a>
-                    
+
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-kania" aria-controls="navbar-kania" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -321,11 +322,12 @@
                     <div class="col-md-8">
                         <ul class="footer-icon-social mb-0 mt-4 p-0 text-center text-md-right title-xs-small title-medium">
                             <li class="list-inline-item">
-                                <a href="/#" class="text-gray-dark"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/groups/129554233722350/" class="text-gray-dark"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li class="list-inline-item pl-4">
-                                <a href="/#" class="text-gray-dark"><i class="fa fa-twitter"></i></a>
+                                <a href="https://twitter.com/exsmss?lang=en" class="text-gray-dark"><i class="fa fa-twitter"></i></a>
                             </li>
+                            <!--
                             <li class="list-inline-item pl-4">
                                 <a href="/#" class="text-gray-dark"><i class="fa fa-google-plus"></i></a>
                             </li>
@@ -335,6 +337,7 @@
                             <li class="list-inline-item pl-4">
                                 <a href="/#" class="text-gray-dark"><i class="fa fa-instagram"></i></a>
                             </li>
+                            -->
                         </ul>
                     </div>
                     <!-- //.col-md-8 -->
